--- a/styles/style.css
+++ b/styles/style.css
@@ -9,11 +9,10 @@ h2 {
     text-transform: uppercase;
 }
 
-.container {
+.wrapper {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 0 3vw;
+    justify-content: center;
+    margin-top: 20px;
 }
 
 .greeting {
@@ -29,7 +28,7 @@ h2 {
     background-color: #d8d7d7;
     font-size: 20px;
     font-weight: 700;
-    width: 170px;
+    flex-grow: 1;
 }
 
 .greeting-input value {
@@ -45,17 +44,21 @@ h2 {
     flex-direction: column;
 }
 
+.todo-label {
+    display: flex;
+}
+
 .todo-input {
-    width: 315px;
     font-size: 20px;
+    flex-grow: 1;
 }
 
 .radio-block {
-    margin: 45px 0;
+    margin: 30px 0;
 }
 
 .radio {
-    padding: 35px;
+    padding: 30px 50px;
     background-color: white;
     border-radius: 5px;
 }
@@ -68,7 +71,7 @@ h2 {
 
 .btn {
     height: 40px;
-    margin-top: 10px;
+    margin-top: 5px;
     background-color: #1c5ce6;
     color: white;
     border: none;
@@ -76,12 +79,18 @@ h2 {
     font-size: 18px;
 }
 
+.btn:hover {
+    transition: 0.2ms;
+    background-color: #1440a0;
+}
+
 /*Изменение цвета радио кнопки*/
-input[type='radio'] {
+.input-radio {
     visibility: hidden;
 }
 
-input[type='radio']:after {
+.input-radio:after,
+.input-radio:checked:after {
     width: 13px;
     height: 13px;
     border-radius: 13px;
@@ -94,12 +103,13 @@ input[type='radio']:after {
 
 }
 
-input[type='radio']:checked:after {
-    width: 13px;
-    height: 13px;
-    border-radius: 13px;
-    top: -1px;
-    left: -2px;
+.input-radio:checked:after,
+.task-done:after {
+    width: 7px;
+    height: 7px;
+    border-radius: 100%;
+    top: 1px;
+    left: 0px;
     position: relative;
     content: '';
     display: inline-block;
@@ -107,22 +117,75 @@ input[type='radio']:checked:after {
 
 }
 
-#business:after {
+#business:after,
+#business:checked:after {
     border: 1px solid #0d11f7;
 }
 
 #business:checked:after {
     background-color: #0d11f7;
-    border: 1px solid #0d11f7;
 }
 
-#personal:after {
+#personal:after,
+#personal:checked:after {
     border: 1px solid #ee32de;
 }
 
 #personal:checked:after {
     background-color: #ee32de;
-    border: 1px solid #ee32de;
 }
 
 /*Изменение цвета радио кнопки - конец*/
+ul {
+    padding-inline-start: 0;
+}
+
+.task-list {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.item {
+    position: relative;
+    display: flex;
+    align-items: center;
+    border-radius: 15px;
+    border: 1px solid blue;
+}
+
+.task-item {
+    flex-grow: 1;
+    line-height: 10px;
+}
+
+.task-done {
+    color: rgb(77, 76, 76);
+    text-decoration: line-through;
+}
+
+.button-edit {
+    height: 20px;
+    background-color: orange;
+    border-radius: 3px;
+    border: none;
+    margin-right: 10px;
+}
+
+.button-edit:hover {
+    background-color: rgb(194, 127, 2);
+    transition: 0.2ms;
+}
+
+.button-delete {
+    height: 20px;
+    background-color: #fc4040;
+    margin-right: 10px;
+    border-radius: 3px;
+    border: none;
+}
+
+.button-delete:hover {
+    background-color: rgb(223, 2, 2);
+    transition: 0.2ms;
+}
