--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 body {
     background-color: #d8d7d7;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Rubik', sans-serif;
     color: rgb(75, 74, 74);
 }
 
@@ -49,18 +49,23 @@ h2 {
 }
 
 .todo-input {
-    font-size: 20px;
+    font-size: 14px;
     flex-grow: 1;
 }
 
 .radio-block {
-    margin: 30px 0;
+    margin: 20px 0;
+    display: flex;
+    gap: 10px;
 }
 
 .radio {
-    padding: 30px 50px;
+    padding: 30px 0;
     background-color: white;
     border-radius: 5px;
+    display: flex;
+    flex-grow: 1;
+    justify-content: center;
 }
 
 .bottom-text {
@@ -85,54 +90,55 @@ h2 {
 }
 
 /*Изменение цвета радио кнопки*/
-.input-radio {
+input[type='radio'] {
     visibility: hidden;
 }
 
-.input-radio:after,
-.input-radio:checked:after {
+.circle {
     width: 13px;
     height: 13px;
     border-radius: 13px;
-    top: -1px;
-    left: -2px;
+    top: 2px;
+    left: -3px;
     position: relative;
     content: '';
     display: inline-block;
     visibility: visible;
-
 }
 
-.input-radio:checked:after,
-.task-done:after {
-    width: 7px;
-    height: 7px;
-    border-radius: 100%;
-    top: 1px;
-    left: 0px;
-    position: relative;
-    content: '';
-    display: inline-block;
-    visibility: visible;
-
-}
-
-#business:after,
-#business:checked:after {
+.circle.business {
     border: 1px solid #0d11f7;
 }
 
-#business:checked:after {
-    background-color: #0d11f7;
-}
-
-#personal:after,
-#personal:checked:after {
+.circle.personal {
     border: 1px solid #ee32de;
 }
 
-#personal:checked:after {
+.circle::after {
+    content: '';
+    display: block;
+    opacity: 0;
+    width: 0px;
+    height: 0px;
+}
+
+.circle.business::after {
+    background-color: #0d11f7;
+    border-radius: 50%;
+}
+
+.circle.personal::after {
     background-color: #ee32de;
+    border-radius: 50%;
+}
+
+input:checked~.circle::after {
+    width: 9px;
+    height: 9px;
+    opacity: 1;
+    position: absolute;
+    top: 2px;
+    left: 2px;
 }
 
 /*Изменение цвета радио кнопки - конец*/
